fix ul.row overflow

--- a/src/granum2024/asset/layout.css
+++ b/src/granum2024/asset/layout.css
@@ -30,7 +30,7 @@
 .col-0 {flex:initial;}
 .col-2 {flex:2;}
 .col-3 {flex:3;}
-:where(.row > *) {min-width:0;min-height:0;overflow:hidden;} /* allow shrink */
+:where(.row:not(ul) > *) {min-width:0;min-height:0;overflow:hidden;} /* allow shrink */
 .row > .push {margin-right:var(--push);}
 .row > .shift {margin-left:var(--push);}
 .row > .push + .shift {margin-left:0;}
